Fix, Style: Fixed the spacing of info cards

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -5,7 +5,3 @@
 .helvetica {
   font-family: Arial, Helvetica, sans-serif !important;
 }
-
-.flex-2 {
-  flex: 2 1 0;
-}
